Change tooltips to be in body to prevent sidebar overlapping

--- a/spriteEdit.css
+++ b/spriteEdit.css
@@ -257,6 +257,8 @@
 	        transition: transform 350ms, opacity 350ms;
 	z-index: 121;
 	white-space: nowrap;
+	line-height: 1.6;
+	font-size: 0.875em;
 }
 .spriteedit-tooltip-horizontal {
 	margin-left: 0;
